<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.splash.SplashFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_splash_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_splash_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_splash_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gmarket_medium"
                android:text="@string/app_name"
                android:textColor="@color/green_15bd6f"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="@id/img_splash_logo"
                app:layout_constraintStart_toStartOf="@id/img_splash_logo"
                app:layout_constraintTop_toBottomOf="@id/img_splash_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in_email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="40dp"
            android:alpha="0"
            android:backgroundTint="@color/white"
            android:enabled="false"
            android:fontFamily="@font/noto_regular"
            android:includeFontPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:text="@string/sign_in_main_email_login"
            android:textColor="@color/black_343434"
            android:textSize="14dp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toTopOf="@id/layout_splash_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black_343434"
            app:strokeWidth="1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_splash_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_sign_up_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_regular"
                android:includeFontPadding="false"
                android:text="@string/sign_in_main_question"
                android:textColor="@color/gray_a5a5a5"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_bold"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="@string/sign_in_main_sign_up"
                android:textColor="@color/green_15bd6f"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@id/tv_sign_up_question"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>